[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opacus_fl"
version = "1.0.0"
description = "Sample-level Differential Privacy with Opacus in Flower"

dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "opacus==v1.4.1",
    "scikit-learn>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "opacus_fl.server_app:app"
clientapp = "opacus_fl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
epochs = 5
target-epsilon = 10.0
target-delta = 1e-6
max-grad-norm = 1.0
prox_mu = 0.1
min-available-clients = 3
fraction-fit = 1.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
